# twitter-clone

./: .envrc  .gitignore  LICENSE  README.md  development.sh  docker-compose.yml  lab.py  package-lock.json  run_for_dev.sh
backend/: Dockerfile  pyproject.toml
backend/api/: init_db.py  main.py  settings.py
backend/api/domains/: comment_model.py  presigned_url_model.py  tweet_model.py  user.py  user_model.py
backend/api/infra/aws/: s3_file_uploader.py
backend/api/infra/client/: recommend.py
backend/api/infra/db/: base.py  comment_db.py  database.py  orms.py  tweet_db.py  user_db.py
backend/api/infra/ml/: recommend.py
backend/api/infra/utils/: pass_hassing.py
backend/api/logging/: app_logging.py  config.py
backend/api/routers/: comment_route.py  presigned_url_route.py  tweet_route.py  user_route.py
backend/api/services/: comment_service.py  tweet_service.py  user_service.py
backend/auth_service/: .gitignore  Dockerfile  go.mod  go.sum  main.go
backend/auth_service/.github/workflows/: ci.yml
backend/auth_service/app/controllers/: auth.go  auth_handler.go  db.go  user_handler.go  webserver.go
backend/auth_service/app/models/: db.go  user.go  user_test.go
backend/auth_service/app/utils/: logging.go  middlewares.go  token.go
backend/auth_service/docs/: docs.go  swagger.json  swagger.yaml
backend/tests/: conftest.py
backend/tests/domains/: test_user_model.py
backend/tests/infra/utils/: test_pass_hashing.py
backend/tests/routers/: test_user_route.py
backend/tests/test_domains/: test_user_model.py
backend/tests/test_infra/test_db/: test_tweet_db.py
backend/tests/test_infra/test_utils/: test_pass_hashing.py
backend/tests/test_routers/: test_tweet_route.py  test_user_route.py
backend/tweet_service/: Dockerfile  go.mod  go.sum  main.go
backend/tweet_service/docs/: docs.go  swagger.json  swagger.yaml
backend/tweet_service/src/controllers/: db.go  handler.go  tweet_handler.go  webserver.go  webserver_test.go
backend/tweet_service/src/models/: base.go  db.go  tweet.go
frontend/: .gitignore  (+5 more)
(+40 files in other folders)
