[tool.poetry]
name = "envshare-back"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
pytest = "^7.1.2"
email-validator = "^1.2.1"
SQLAlchemy = "^1.4.36"
python-ulid = "^1.1.0"
pytest-mock = "^3.7.0"
psycopg2-binary = "^2.9.3" 

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
