[tool.poetry]
name = "envshare-back"
version = "0.1.0"
description = ""
authors = ["ryutaro.furutani@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
pytest = "^7.1.2"
email-validator = "^1.2.1"
SQLAlchemy = "^1.4.36"
python-ulid = "^1.1.0"
pytest-mock = "^3.7.0"
psycopg2-binary = "^2.9.3"
websockets = "^10.3"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
passlib = "^1.7.4"
requests = "^2.28.1"
bcrypt = "^4.0.0"
python-multipart = "^0.0.5"
boto3 = "^1.24.72"
isort = "^5.10.1"
autopep8 = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
SQLAlchemy-Utils = "^0.38.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
